    Closes: #513552 -- Please auto detect the sound devices

  [ Ben Armstrong ]
  * Support ath5k wifi toggling and default to using it if ath_pci is not
    present.
  * Fix detection of rfkill on systems that don't have it.

  [ Damyan Ivanov ]
  * rename etc/modprobe.d/eeepc to eeepc.conf, adapting to modprobe requirement
    Closes: #518573
  * Standards-Version: 3.8.1 (no changes needed)

 -- Ben Armstrong <synrg@sanctuary.nslug.ns.ca>  Sat, 07 Feb 2009 14:47:15 -0400

eeepc-acpi-scripts (1.0.11) unstable; urgency=low

  [ Ben Armstrong ]
  * VGA_ON and LVDS_OFF replace COMBINED_DISPLAY_SWITCHES to provide
    better default behaviour for VGA toggle.  See comments in
    /etc/default/eeepc-acpi-scripts for common variations (specify
    mode or use xinerama-style display).
  * Blacklist useless pcspkr module.
  * Fix VGA toggle: default to enable LVDS / disable VGA so that
    it will work when the external monitor is disconnected.

  [ Damyan Ivanov ]
  * when "soft-disabling" bluetooth, power down the USB port
  * improve long description a bit

  [ Raphael Geissert ]
  * test for OSD_SHOWN before checking for gnome-osd for consistency
  * add support for knotify but only use it if aosd_cat is not installed
    Closes: #513551 -- please add support for knotify
  * fix typo in notify()'s usage message
  * Add support for different suspend methods, but keep pm-suspend as the
    default.
    Closes: #499545 -- Configurable FnF1 key - suspend to ram or hibernate

 -- Damyan Ivanov <dmn@debian.org>  Mon, 02 Feb 2009 17:39:10 +0200

eeepc-acpi-scripts (1.0.10) unstable; urgency=low

  * add missing "--user $user" to dcop invocation.
    really closes: #499544

 -- Damyan Ivanov <dmn@debian.org>  Tue, 21 Oct 2008 22:44:32 +0300

eeepc-acpi-scripts (1.0.9) unstable; urgency=low

  * make package removal check depend on the functions.sh, not doc dir;
    streamline loading of functions and default file